--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "sass": "^1.77.8",
+    "sass-embedded": "^1.77.8",
     "scss": "^0.2.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
